lab6/k8s/books-service/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-node-app
  template:
    metadata:
      labels:
        app: books-node-app
    spec:
      containers:
        - image: daryna04/books-service:lab2
          imagePullPolicy: Always
          name: books-node-app
          ports:
            - containerPort: 8080
