lab6/k8s/books-service/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-node-app-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: books-node-app
